--- a/src/s2-homeworks/hw03/Greeting.module.css
+++ b/src/s2-homeworks/hw03/Greeting.module.css
@@ -2,21 +2,53 @@
 }
 
 .inputAndButtonContainer {
+    display: flex;
+    gap: 12px;
+    margin: 9px 0 0 0;
 }
 
 .error {
+    font-weight: 400;
+    font-size: 14px;
+    color: #CC0000;
+    margin-top: 7px;
 }
 
 .input {
+    width: 372px;
+    height: 36px;
+    border: 1px solid #D1D1D1;
+    border-radius: 5px;
+    outline: none;
+    padding: 0 12px;
+
+
+    font-weight: 500;
+    font-size: 16px;
+    color: #000000;
 }
 
 .input:focus {
 }
 
 .errorInput {
+    border: 1px solid red;
+    width: 372px;
+    height: 36px;
+    border-radius: 5px;
+
 }
 
 .button {
+    width: 78px;
+    height: 36px;
+    background-color: #0066CC;
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: 600;
+    outline: none;
+    border-radius: 3px;
+    border: none;
 }
 
 .button:focus {
@@ -26,10 +58,19 @@
 }
 
 .button:disabled {
+    background-color: rgba(0, 102, 204, 0.6);
+
 }
 
 .text {
+    color: #00000080;
+    font-size: 14px;
+    font-weight: 400;
 }
 
 .greeting {
+    font-weight: 500;
+    font-size: 14px;
+
+
 }
