--- a/src/s2-homeworks/hw04/common/c1-SuperInputText/SuperInputText.module.css
+++ b/src/s2-homeworks/hw04/common/c1-SuperInputText/SuperInputText.module.css
@@ -1,20 +1,38 @@
 .input:focus {
+    outline: none;
 }
 
 .input {
+    order: 2;
+    width: 372px;
+    height: 36px;
+    border-radius: 5px;
+    border: 1px solid #D1D1D1;
+
 }
 
 .inputWrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
 
 .superInput {
 }
 
 .errorInput {
+    border: 1px solid #CC1439
 }
 
 .errorInput:focus {
+    outline: none;
+
 }
 
 .error {
+    order: 1;
+    font-weight: 400;
+    font-size: 10px;
+    color: #FF0000;
+
 }
