--- a/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
+++ b/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
@@ -1,36 +1,72 @@
 .button {
+    width: 132px;
+    height: 30px;
+    border-radius: 3px;
+    padding-top: 5px;
+    padding-right: 24px;
+    padding-bottom: 5px;
+    padding-left: 24px;
+    border: none;
 }
 
 .disabled {
+    background: #004D99;
+    color: #002E5C;
+    font-weight: 600;
+    font-size: 14px;
 }
 
 .secondary {
+    width: 176px;
+    height: 30px;
+    border-radius: 3px;
+    border: 1px solid #0066CC;
+    font-weight: 600;
+    font-size: 14px;
+    color: #0066CC;
+    background-color: inherit;
 }
 
 .default {
+    background-color: #0066CC;
+    color: white;
+    font-weight: 600;
+    font-size: 14px;
 }
 
 .red {
+    background-color: #CC1439;
+    color: white;
+    font-weight: 600;
+    font-size: 14px;
 }
 
 .default:hover {
+    background-color: #0080FF;
 }
 
 .red:hover {
+    background-color: #FF1A47;
 }
 
 .secondary:hover {
+    background: #E5F0FA;
 }
 
 
 .default:active {
+    background: #0059B2;;
 }
 
 .secondary:active {
+    background: #C9E5FF;
 }
 
 .red:active {
+    background: #B21232;
 }
 
 .button:disabled {
+    background: #80A5CC;
+    color: #8096AD;
 }
