--- a/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
+++ b/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
@@ -1,24 +1,67 @@
 .sidebar {
+    position: absolute;
+    padding-top: 60px;
+    padding-left: 70px;
+    width: 317px;
+    height: 100vh;
+    /*outline: 1px solid red;*/
+    background-color: #ffffff;
+    z-index: 3;
+    transform: translateX(-100%);
+    top: 0;
+    left: -316px;
 }
 
 .sidebar.open {
+    transform: translateX(100%);
+
 }
 
 .background {
+    position: absolute;
+    top:0;
+    background-color: rgba(0, 0, 0, 0.3);
+    width: 100vw;
+    height: 100vh;
+    z-index: 2;
 }
 
 .nav {
+    display: flex;
+    flex-direction: column;
+    gap: 45px;
 }
 
 .nav a {
+
+    font-weight: 600;
+    font-size: 22px;
+    text-decoration: none;
+    color: black;
+
 }
 
 .nav a:hover {
+    color: #58ACFF;
+
 }
 
 .nav a.active {
+    color: #0059B2;
+    text-decoration: underline;
+
+
 }
+
 .close {
+    position: absolute;
+    text-align: right;
+    border: 0;
+    box-sizing: border-box;
+    background-color: transparent;
+    top: 16px;
+    right: 24px;
+    cursor: pointer;
 }
 
 .close img {
