--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -7,6 +7,7 @@
 .hw {
     max-width: 1280px;
     margin: 0 auto;
+    margin-top: 30px;
 /*margin-bottom: 50px;*/
     font-family: "Montserrat", serif;
 
@@ -46,7 +47,7 @@
     font-weight: 600;
     /*line-height: 26.82px;*/
     text-align: left;
-/*margin-top: 50px;*/
+/*margin-top: 108px;*/
     margin-left: 195px;
 }
 
