--- a/src/s2-homeworks/hw06/common/c4-SuperEditableSpan/SuperEditableSpan.module.css
+++ b/src/s2-homeworks/hw06/common/c4-SuperEditableSpan/SuperEditableSpan.module.css
@@ -1,10 +1,26 @@
 .spanBlock {
+    display: flex;
+    align-items: end;
+    gap: 10px;
+    margin-bottom: 24px;
 }
 
 .span {
+    font-weight: 500;
+    font-size: 16px;
+    color: rgba(0, 128, 255, 1);
+    /*margin-left: 10px;*/
+
 }
 
 .input {
+    width: 276px;
+    height: 36px;
+    margin-bottom: 16px;
+    padding-left: 24px;
+
+    border: 1px solid rgba(209, 209, 209, 1);
+    border-radius: 5px;
 }
 
 .pen {
