--- a/src/s2-homeworks/hw07/common/c5-SuperSelect/SuperSelect.module.css
+++ b/src/s2-homeworks/hw07/common/c5-SuperSelect/SuperSelect.module.css
@@ -1,4 +1,20 @@
 .select {
+    width: 165px;
+    height: 24px;
+
+    font-weight: 400;
+    font-size: 14px;
+    color: rgba(0, 0, 0, 1);
+
+
+    border-radius: 2px;
+    border: 1px solid rgba(194, 194, 194, 1);
+
+    padding: 0px 10px 0 10px;
+
+    background: rgba(255, 255, 255, 1);
+
+
 }
 
 .select:focus {
