--- a/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
+++ b/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
@@ -1,5 +1,5 @@
 .button {
-    width: 132px;
+    /*width: 132px;*/
     height: 30px;
     border-radius: 3px;
     padding-top: 5px;
@@ -17,7 +17,7 @@
 }
 
 .secondary {
-    width: 176px;
+    /*width: 176px;*/
     height: 30px;
     border-radius: 3px;
     border: 1px solid #0066CC;
