--- a/src/s2-homeworks/hw11/HW11.module.css
+++ b/src/s2-homeworks/hw11/HW11.module.css
@@ -1,8 +1,25 @@
+.mainWrapper{
+margin-top: 200px;
+
+}
+
+
 .container {
+    margin-top: 30px;
 }
 
 .wrapper {
+    display: flex;
+    align-items: center;
+    gap: 13px;
+    margin-top: 56px
 }
 
+
+
 .number {
+    font-weight: 600;
+    font-size: 16px;
+
+
 }
