--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -47,7 +47,7 @@
     font-weight: 600;
     /*line-height: 26.82px;*/
     text-align: left;
-/*margin-top: 108px;*/
+margin-top: 108px;
     margin-left: 195px;
 }
 
