--- a/src/s2-homeworks/hw13/HW13.module.css
+++ b/src/s2-homeworks/hw13/HW13.module.css
@@ -2,6 +2,11 @@
 }
 
 .responseContainer {
+    margin-top: 90px;
+    /*height: 336px;*/
+    display: flex;
+gap: 87px;
+
 }
 
 .imageContainer {
@@ -10,13 +15,28 @@
 .image {
 }
 
-.textContainer{
+.textContainer {
+
+align-self: center;
+    width: 510px;
 }
 
 .code {
+    font-weight: 500;
+    font-size: 30px;
+
+
 }
 
 .text {
+
+    font-weight: 500;
+    font-size: 16px;
+
+
 }
+
 .info {
+    font-weight: 500;
+    font-size: 16px;
 }
