--- a/src/s2-homeworks/hw14/HW14.module.css
+++ b/src/s2-homeworks/hw14/HW14.module.css
@@ -1,7 +1,10 @@
 .tech {
-
+    line-height: 24px;
+    font-size: 16px;
+    font-weight: 400;
 }
 
 .loading {
-
+    margin-top: 11px;
+    margin-left: 320px;
 }
