--- a/src/s2-homeworks/hw15/common/c9-SuperPagination/SuperPagination.module.css
+++ b/src/s2-homeworks/hw15/common/c9-SuperPagination/SuperPagination.module.css
@@ -1,11 +1,17 @@
 .pagination {
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 700px;
+    margin-bottom: 36px;
 }
 
 .text1 {
-
+/*margin-right: 20px;*/
+    font-size: 14px;
 }
 
 .text2 {
+    font-size: 14px;
 
 }
